mvn  comp