@@ -153,11 +153,22 @@
 							<version>3.0.0-M7</version>
 							<configuration>
 								<suiteXmlFiles>
-									<suiteXmlFile></suiteXmlFile>
+									<suiteXmlFile>test-output/testng.xml</suiteXmlFile>
 								</suiteXmlFiles>
 							</configuration>
 						</plugin>
-						</plugins>
+						<plugin>
+                           <groupId>org.apache.maven.plugins</groupId>
+                           <artifactId>maven-compiler-plugin</artifactId>
+                           <version>3.8.1</version> <!-- or the version you are using -->
+                           <configuration>
+                           <compilerArgs>
+            <arg>--add-opens</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+        </compilerArgs>
+    </configuration>
+</plugin>
+</plugins>
 					</pluginManagement>
 			</build>
 		</profile>
